<resources>
    <string name="app_name">Found IT!!!!</string>
    <string name="facebook_app_id">1154434514751382</string>
    <string name="fb_login_protocol_scheme">fb1154434514751382</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="error">Error Message</string>
    <string name="sorry">Sorry, There is some problem , please wait for a moment</string>
    <string name="logout">Logout</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1154434514751382</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1154434514751382</string>
    <!--    login page text-->
    <string name="loginpage_account">Account / Email</string>
    <string name="loginpage_password">Password</string>
    <string name="send">Submit</string>
    <string name="loginpage_signupText">Go to sign up?</string>
    <!--    sign up text-->
    <string name="the">The </string>
    <string name="signup_name">Name</string>
    <string name="signup_account">Account</string>
    <string name="signup_email">Email</string>
    <string name="signup">Sign up!</string>
    <string name="signup_invaild">Your </string>
    <string name="success_signup">Success Sign Up!</string>
    <string name="existed"> are invalid or exist</string>
    <string name="signup_info">The user informations</string>
    <string name="terms">I read and agree to all terms and conditions </string>

    <!--    image identity-->
    <string name="select">Select</string>
    <string name="identity">Identity</string>
    <string name="upload">Upload</string>
    <string name="cannotfindout">Sorry, I cannot find the tag....</string>
    <string name="warring_no_select_picture">Please select or take a picture</string>
    <string name="propertyName">Title / Name </string>
    <string name="tag_hint">The picture may be about above tag : (You can click here to add new tag(Max 5))</string>
    <string name="other_info">Other information:</string>
    <string name="tag_here">Tag </string>

    <!--    internet error-->
    <string name="error_404"> Internet error , Please check your internet setting or wait for a few minutes </string>


    <!-- bottom nav bar -->
    <string name="btm_nav_bar_title_home">Home</string>
    <string name="btm_nav_bar_title_profile">Profile</string>
    <string name="btm_nav_bar_title_post">Post</string>

    <!-- homepage -->
    <string name="current_lost">Current Lost</string>
    <string name="reward">Reward</string>
    <string name="search">You can enter some keywords to search the property (the keywords can be type or title of property )</string>

    <!-- checking-->
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="addressQuestion">Where lost this property?</string>
    <string name="ans">Ans</string>
    <string name="congratulation">Congratulation</string>
    <string name="meet_ans">You meet the requirements Lets talk with the finder</string>
    <string name="sorry_check">Sorry</string>
    <string name="not_Meet_ans">You are not matching with the requirement</string>
    <string name="cancel">Cancel</string>

    <!-- permission -->
    <string name="grantpermission">We need some permission for this action</string>
    <string name="needlogin">Sorry, you need login before use this function</string>


    <!-- profile -->
    <string name="username">UserName</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="phoneno">Phone Number</string>
    <string name="profile_open">Open</string>
    <string name="profile_cloas">Close</string>
    <string name="found">Someone claim the property</string>


</resources>
