<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcomepage">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_name"
        android:id="@+id/signup_page_name"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_page_name_invalid"
        android:visibility="gone"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_account"
        android:id="@+id/signup_page_account"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_page_account_invalid"
        android:visibility="gone"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_email"
        android:id="@+id/signup_page_email"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_page_email_invalid"
        android:visibility="gone"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:hint="@string/loginpage_password"
        android:id="@+id/signup_page_password"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_page_password_invalid"
        android:visibility="gone"
        ></TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:background="@color/colorAccent"
        android:textColor="@color/com_facebook_device_auth_text"
        android:id="@+id/signup_page_send_button"
        ></Button>


</LinearLayout>