<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_login"
    android:layout_height="match_parent"
    tools:context=".Signuppage">


    <ImageView
        android:id="@+id/signup_bg_stroke"
        android:layout_width="345dp"
        android:layout_height="587dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stroke" />

    <EditText
        android:id="@+id/signup_page_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:hint="@string/signup_email"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toBottomOf="@+id/create_account_signup"></EditText>

    <EditText
        android:id="@+id/signup_page_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/loginpage_password"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toBottomOf="@+id/signup_page_email"></EditText>

    <ImageView
        android:id="@+id/create_account_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toTopOf="@+id/signup_bg_stroke"
        app:srcCompat="@drawable/title_signup" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toBottomOf="@+id/signup_page_send_button"
        app:srcCompat="@drawable/login_or" />

    <ImageButton
        android:id="@+id/signup_page_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toBottomOf="@+id/signup_page_password"
        app:srcCompat="@drawable/signup_signup"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/aggreement"
        android:layout_width="287dp"
        android:layout_height="22dp"
        android:layout_marginTop="61dp"
        android:text="@string/terms"
        app:layout_constraintEnd_toEndOf="@+id/signup_bg_stroke"
        app:layout_constraintStart_toStartOf="@+id/signup_bg_stroke"
        app:layout_constraintTop_toTopOf="@+id/signup_page_password" />

</androidx.constraintlayout.widget.ConstraintLayout>