<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPost">

    <include
        android:id="@+id/editPost_toolbar"
        layout="@layout/app_toolbar_nosearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/editPOst_bottom_nav_bar"
        layout="@layout/reuseable_bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollview_ed"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/editPOst_bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPost_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainlayout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editPOst_bottom_nav_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPost_toolbar">

            <ImageView
                android:id="@+id/edit_post_icon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="52dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mainlayout_edit"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/hint_title_editpost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="333dp"
                android:text="@string/propertyName"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_post_icon" />

            <EditText
                android:id="@+id/edit_name_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="198dp"
                android:clickable="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/propertyName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hint_title_editpost" />

            <TextView
                android:id="@+id/edit_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tag_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name_property" />

            <LinearLayout
                android:id="@+id/editpost_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_tag">

                <EditText
                    android:id="@+id/editPost_imagetype_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="true"
                    android:tag="0"
                    android:textSize="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editPost_imagetype_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="true"
                    android:tag="1"
                    android:textSize="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editPost_imagetype_thr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="true"
                    android:tag="2"

                    android:textSize="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editPost_imagetype_fou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="true"
                    android:tag="3"

                    android:textSize="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editPost_imagetype_fiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="true"
                    android:tag="4"

                    android:textSize="10dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_tag">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:text="@string/found"></TextView>

                <Switch
                    android:id="@+id/edit_post_switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:clickable="false"
                    android:focusable="false" />


            </LinearLayout>

            <TextView
                android:id="@+id/editpost_spinner_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <EditText
                android:id="@+id/editpost_ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/ans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editpost_spinner_q1" />

            <TextView
                android:id="@+id/editpost_spinner_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editpost_ans1" />

            <EditText
                android:id="@+id/editpost_ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/ans"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editpost_spinner_q2" />

            <EditText
                android:id="@+id/editPost_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editpost_ans2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>